<resources>
    <string name="app_name">GameSearch</string>
    <string name="title_activity_search">SearchActivity</string>


    <string name="search_by">Search By</string>
    <string name="search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="videoGame">Game</string>
    <string name="company">Company</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="name">Name</string>
    <string name="filter_by">Filter by</string>
    <string name="preference_file_key">userKey</string>
    <string name="password_key">passwordKey</string>
    <string name="username_key">usernameKey</string>
    <string name="userType_key">userTypeKey</string>
    <string name="defaultKeyValue" />
    <string name="server_url">http://guyco.qthome.org:8090</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="AuthLayout">AuthLayout</string>
    <string name="layout_bundle">layoutBundle</string>
    <string name="login_fail">Login failed!</string>
    <string name="login_success">Login Success!</string>
    <string name="game_list">Game List</string>
    <string name="game_search">Game Search</string>
    <string name="show_all">Show all</string>
    <string name="genre_d">Genre:</string>
    <string name="company_d">Company:</string>
    <string name="year_d">Year:</string>
</resources>
