<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorBack"
    android:orientation="vertical"
    tools:context=".SearchFragment"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/search_by"
        style="@style/baseText"/>



    <TableLayout
        android:id="@+id/scoreTableFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:weightSum="2"
        >

        <TableRow
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp">


            <TextView
                android:id="@+id/fragmentSpinnerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/filter_by"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                style="@style/baseText"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/FilterBy"
                style="@style/baseText"
                />

        </TableRow>

        <TableRow
        android:layout_width="wrap_content"
        android:weightSum="2"
        android:layout_height="match_parent"
            android:layout_marginLeft="15dp">

        <TextView
            android:id="@+id/fragmentNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            style="@style/baseText"
             />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:enabled="false"
            android:hint="@string/name"
            android:inputType="text"
            android:importantForAutofill="no"
            style="@style/baseText"/>
    </TableRow>

    </TableLayout>
    <Button
            android:id="@+id/buttonPerformSearch"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/search"
        style="@style/baseText"/>



</LinearLayout>